MDEV-9462: Out of memory using explain on 2 empty tables

Fixed adding derived tables items to outer one.